--- a/Simple-Chatbot-HuggingFace-LLMs.ipynb
+++ b/Simple-Chatbot-HuggingFace-LLMs.ipynb
@@ -90,6 +90,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load Phi-3 model (GPU optimized)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -145,7 +152,7 @@
     "id": "Wtu5Ahlop59_"
    },
    "source": [
-    "Chat Function (Correct Prompt Format)"
+    "# Chat Function (Correct Prompt Format)"
    ]
   },
   {
@@ -191,7 +198,7 @@
     "id": "Z3-GYQmarXBD"
    },
    "source": [
-    "Chat Loop"
+    "# Chat Loop"
    ]
   },
   {
@@ -251,7 +258,8 @@
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10.11"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
